find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)
add_library(application application.cpp application.hpp)
include_directories( ${OPENGL_INCLUDE_DIRS}  ${GLUT_INCLUDE_DIRS} )
target_link_libraries(application ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} )
target_link_libraries(application timer utils)

add_subdirectory(basic_steering)
add_subdirectory(seek)
add_subdirectory(wander)
add_subdirectory(dynamic_seek)
add_subdirectory(align)
add_subdirectory(pursue)
add_subdirectory(follow_path)
