find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)
add_library(application application.cpp application.hpp)
include_directories( ${OPENGL_INCLUDE_DIRS}  ${GLUT_INCLUDE_DIRS} )
target_link_libraries(application ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} )
target_link_libraries(application timer utils steering_behaviour)

add_subdirectory(follow_path)
add_subdirectory(flocking)
add_subdirectory(steering)
add_subdirectory(priority)
